@@ -1,3 +1,8 @@
+2012-01-06: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* MPDController.[h|m], CollectionBrowser.[h|m], 
+	  Resources/CollectionBrowser.gorm, AppController.m
+	* add a Music Collection filesystem browser
+
 2012-12-20: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* MPDController.m fix double frees and crashers in 
 	  the collection controller
